--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
-h1{
+/* h1{
     text-align: center;
     justify-content: center;
     display: flex;
     min-height: 100vh;
     align-items: center;
 }
+ */
